Makes DEC clickable, z-index correction nth-child to 3

--- a/public/css/nineteenth.scss
+++ b/public/css/nineteenth.scss
@@ -262,7 +262,7 @@ body{
   	top: 100px;  	
 }
 
-.issueIndex:nth-child(2){
+.issueIndex:nth-child(3){
     z-index:2; /*makes DEC clickable*/
 }
 
@@ -532,12 +532,16 @@ flex-wrap: wrap;
 .authorCard{
     @extend .authorLegend;
     width: 170px;
+    height: 300px;
     align-self: flex-start;
     border: 1px solid $hr-color;
     padding: 10px;
     bottom: 290px;
     background: #29303a;
     box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #tei{
